Crash when changing visibility of instanced collection #55375

Closed
opened 2018-06-07 17:40:20 +02:00 by Dalai Felinto · 4 comments

Blender Version
Broken: 8dc33a81b0 (blender2.8 HEAD)

Short description of error
Crash when changing visibility of instanced collection.

Exact steps for others to reproduce the error
Simple file, unlink a collection, and instance it back in:

instanced_collection.blend

Now turn off "Cube" collection viewport visibility → crash.

SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:331 in check_datablock_expanded
Full backtrace: P718

**Blender Version** Broken: 8dc33a81b09a (blender2.8 HEAD) **Short description of error** Crash when changing visibility of instanced collection. **Exact steps for others to reproduce the error** Simple file, unlink a collection, and instance it back in: [instanced_collection.blend](https://archive.blender.org/developer/F3618026/instanced_collection.blend) Now turn off "Cube" collection viewport visibility → crash. `SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/depsgraph/intern/eval/deg_eval_copy_on_write.cc:331 in check_datablock_expanded` Full backtrace: [P718](https://archive.blender.org/developer/P718.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Sergey Sharybin was assigned by Dalai Felinto 2018-06-07 17:40:45 +02:00
Author
Owner

Related to this, I get a crash when trying to render:

F3617978

Change engine to Cycles before rendering.

SUMMARY: AddressSanitizer: SEGV /intern/cycles/render/shader.cpp:330 in ccl::Shader::tag_used(ccl::Scene*)
Full backtrace: P719

Related to this, I get a crash when trying to render: [F3617978](https://archive.blender.org/developer/F3617978/instanced_collection.blend) *Change engine to Cycles before rendering.* `SUMMARY: AddressSanitizer: SEGV /intern/cycles/render/shader.cpp:330 in ccl::Shader::tag_used(ccl::Scene*)` Full backtrace: [P719](https://archive.blender.org/developer/P719.txt)

This issue was referenced by 4017b48331

This issue was referenced by 4017b4833152655dbb161896ab1bf47469a61d69

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55375
No description provided.